[package]
name = "devlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
chrono = "0.4"
anyhow = "1.0"

[[bin]]
name = "dlog"
